# MLops-Openenvhack

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  PR_BODY.md  README.md  REQUIREMENTS_CHECKLIST.md  app.py  client.py  context.md  inference.py  mlops_environment.py  openenv.yaml  pyproject.toml  requirements.txt  test_run.py  uvicorn.err  validate-submission.sh
paper/: outline.md
server/: app.py  artifact_generator.py  inference.py  mlops_environment.py  models.py  openenv.yaml  openenv_state.py  pyproject.toml
tests/: test_api.py  test_artifacts.py  test_environment.py  test_grading.py
venv2/: pyvenv.cfg
venv2/Scripts/: activate  activate.bat
